# htld

./: .gdb_history  .syntastic_cpp_config  CMakeLists.txt  OpenTLD.cpp  bps
3rdParties/lib/: CMakeLists.txt
3rdParties/src/libconfig/: y.tab.c  y.tab.h
heterogenous_tld_lib/: CMakeLists.txt  fast_detection.cuh  fast_tracking.cuh  imodule.hpp  mem_management.cu  utilities.hpp
imacq/: CMakeLists.txt
libhtld/: CMakeLists.txt
libhtld/heterogenous_tld_lib/: fast_detection.cu  fast_tracking.cu  global_declarations.hpp  mem_management.cuh  utilities.cpp
libhtld/libtld/: TLD.cpp  TLD.h
libhtld/main/: CMakeLists.txt  Main.cpp  Main.h  Makefile  cmake_install.cmake
libtld/: CMakeLists.txt  DetectorCascade.cpp  NNClassifier.cpp  TLD.cpp  TLD.h
libtld/mftracker/: MedianFlowTracker.h
main/: CMakeLists.txt  Config.cpp  Gui.cpp  Gui.h  Main.cpp  Main.h
